Fix overflow issues with selectize box

--- a/indico/htdocs/sass/modules/abstracts/_abstract_page.scss
+++ b/indico/htdocs/sass/modules/abstracts/_abstract_page.scss
@@ -282,6 +282,12 @@
     }
 }
 
-.abstract-review-box.weak-hidden {
-    display: none;
+.abstract-review-box {
+    &.weak-hidden {
+        display: none;
+    }
+
+    .i-timeline-item-box .i-box-footer {
+        overflow: visible;
+    }
 }
